@@ -8,6 +8,8 @@ Version 1.0.6 (Januari xxth 2013)
 - Chime light/switch status will now also trigger a notification
 - Web Protection, option to ignore (local) networks
 - Code should now compile also with VS2010 express
+- Code now compiles also with Debian (Mac OS)
+- Lighting 1, ARC Doorbell is now send with a 'Chime' instead of AllOn
 
 Version 1.0.5 (December 29th 2012)
 - Start of History document
